--- a/HTML-CSS-Git-Basics/css/style.css
+++ b/HTML-CSS-Git-Basics/css/style.css
@@ -1,4 +1,9 @@
 @font-face {
+  font-family: "Lato-Bold";
+  src: url("../fonts/Lato-Bold.woff") format("woff"), url("../fonts/Lato-Bold.woff2") format("woff2");
+}
+
+@font-face {
   font-family: "Lato-Light";
   src: url("../fonts/Lato-Light.woff") format("woff"), url("../fonts/Lato-Light.woff2") format("woff2");
 }
@@ -109,8 +114,37 @@ body {
   grid-template-columns: 35% 65%;
 }
 
-.middle__feature {
+.middle__common-data {
+  background: #e0e0e1;
+  padding: 7% 15% 0 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   grid-area: feature;
+}
+
+.middle__contact-data {
+  margin-bottom: 10%;
+}
+
+.middle__name-contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: 'Lato-Bold';
+  font-size: 50px;
+  line-height: 60px;
+}
+
+.middle__text {
+  font-family: 'Lato-Light';
+  font-size: 42px;
+  line-height: 60px;
+  color: #1f2222;
 }
 
 .middle__resume {
@@ -251,79 +285,4 @@ body {
     height: 4px;
     margin: 0 5px 0 0;
   }
-}
-@supports (-webkit-appearance:none){
-
-}
-
- @media screen and (max-width: 2128px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 1756px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 1612px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 1280px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 1080px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 980px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 780px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 580px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media screen and (max-width: 380px){
-
-@supports (-webkit-appearance:none){
-
-}
-
 }
