--- a/src/main.pug
+++ b/src/main.pug
@@ -1,3 +1,12 @@
 main(class="middle")
-  section(class="middle__feature")
+  section(class="middle__common-data")
+    div(class="middle__contact-data contact-data")
+      span(class="middle__name-contact") Address: 
+      span(class="middle__text") Russia, Orengurgskai area, Gau
+    div(class="middle__contact-data contact-data")
+      span(class="middle__name-contact") Phone: 
+      span(class="middle__text") +7 (909) 614 50 81
+    div(class="middle__contact-data contact-data")
+      span(class="middle__name-contact") Email: 
+      span(class="middle__text") artm.orlov.88@list.ru
   section(class="middle__resume")
