--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,4 +1,9 @@
 @font-face { 
+  font-family: "Lato-Bold";
+  src: url('../fonts/Lato-Bold.woff') format("woff"), url('../fonts/Lato-Bold.woff2') format("woff2");
+}
+
+@font-face { 
   font-family: "Lato-Light";
   src: url('../fonts/Lato-Light.woff') format("woff"), url('../fonts/Lato-Light.woff2') format("woff2");
 }
