--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,34 @@
   grid-template-columns: 35% 65%;
 }
 
-.middle__feature {
+.middle__common-data {
+  background: #e0e0e1;
+  padding: 7% 15% 0 15%;
+
+  display: flex;
+  flex-direction: column;
+
   grid-area: feature;
+}
+
+.middle__contact-data {
+  margin-bottom: 10%;
+}
+
+.middle__name-contact {
+  display: flex;
+  
+  font-family: 'Lato-Bold';
+  font-size: 50px;
+  line-height: 60px;
+}
+
+.middle__text {
+  font-family: 'Lato-Light';
+  font-size: 42px;
+  line-height: 60px;
+
+  color: #1f2222;
 }
 
 .middle__resume {
