feat: add social network

--- a/src/main.pug
+++ b/src/main.pug
@@ -9,4 +9,9 @@ main(class="middle")
     div(class="middle__contact-data contact-data")
       span(class="middle__name-contact") Email: 
       span(class="middle__text") artm.orlov.88@list.ru
+    div(class="middle__social-network")
+      a(href="https://vk.com/id106321171" class="middle__network" id="vk") Artem Orlov
+      a(href="https://www.facebook.com/artem.orlov.566/" class="middle__network" id="fb") Artem Orlov
+      a(href="https://www.instagram.com/artemorlov26//" class="middle__network" id="instagram") Artem Orlov
+      a(class="middle__network" id="whatUp") +7 (909) 614 50 81
   section(class="middle__resume")
