--- a/src/main.pug
+++ b/src/main.pug
@@ -14,4 +14,53 @@ main(class="middle")
       a(href="https://www.facebook.com/artem.orlov.566/" class="middle__network" id="fb") Artem Orlov
       a(href="https://www.instagram.com/artemorlov26//" class="middle__network" id="instagram") Artem Orlov
       a(class="middle__network" id="whatUp") +7 (909) 614 50 81
+    div(class="middle__container-skills") Skills
+      div(class="middle__skills")
+        p HTML
+        span
+          span(class="middle__skills-html")
+      div(class="middle__skills")
+        p CSS
+        span
+          span(class="middle__skills-css")
+      div(class="middle__skills")
+        p JavaScript
+        span
+          span(class="middle__skills-js")
+      div(class="middle__skills")
+        p Node JS
+        span
+          span(class="middle__skills-njs")
+      div(class="middle__skills")
+        p Express
+        span
+          span(class="middle__skills-exp")
+      div(class="middle__skills")
+        p SCSS
+        span
+          span(class="middle__skills-scss")
+      div(class="middle__skills")
+        p GULP
+        span
+          span(class="middle__skills-gulp")
+      div(class="middle__skills")
+        p JADE
+        span
+          span(class="middle__skills-jade")
+      div(class="middle__skills")
+        p Socket (socket.io)
+        span
+          span(class="middle__skills-socket")
+      div(class="middle__skills")
+        p GIT
+        span
+          span(class="middle__skills-git")
+      div(class="middle__skills")
+        p Photoshop
+        span
+          span(class="middle__skills-ph")
+      div(class="middle__skills")
+        p Figma
+        span
+          span(class="middle__skills-fg")
   section(class="middle__resume")
