feat: add about myself and education

--- a/HTML-CSS-Git-Basics/css/style.css
+++ b/HTML-CSS-Git-Basics/css/style.css
@@ -13,6 +13,11 @@
   src: url("../fonts/Mukta-ExtraBold.woff") format("woff"), url("../fonts/Mukta-ExtraBold.woff2") format("woff2");
 }
 
+@font-face {
+  font-family: "Roboto-Regular";
+  src: url("../fonts/Roboto-Regular.woff") format("woff"), url("../fonts/Roboto-Regular.woff2") format("woff2");
+}
+
 html {
   font-size: calc(15px + 0.1vw);
 }
@@ -265,7 +270,52 @@ body {
 }
 
 .middle__resume {
+  padding: 7% 10% 4% 9%;
   grid-area: resume;
+}
+
+.middle__info:not(:last-child) {
+  margin-bottom: 5%;
+}
+
+.middle__info > h2 {
+  color: #7d64a7;
+  font-family: 'Lato-Bold';
+  font-size: 58px;
+  line-height: 47px;
+}
+
+.middle__info > h2::before {
+  content: "";
+  display: inline-block;
+  width: 1vw;
+  height: 1vw;
+  background: #7d64a7;
+  vertical-align: middle;
+  margin: 0 25px 10px 0;
+}
+
+.middle__info > p {
+  padding: 0;
+  margin: 2% 0 0 4%;
+  color: #1f2222;
+  font-family: 'Roboto-Regular';
+  font-size: 42px;
+  line-height: 58px;
+}
+
+.middle__info .middle__name-educational-institution,
+.middle__info .middle__period {
+  margin: 0 0 0 4%;
+}
+
+.middle__info .middle__name-department,
+.middle__info .middle__period {
+  font-size: 30px;
+}
+
+.middle__info .middle__name-educational-institution {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 2128px) {
