--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -12,3 +12,8 @@
   font-family: "Mukta-ExtraBold";
   src: url('../fonts/Mukta-ExtraBold.woff') format("woff"), url('../fonts/Mukta-ExtraBold.woff2') format("woff2");
 }
+
+@font-face { 
+  font-family: "Roboto-Regular";
+  src: url('../fonts/Roboto-Regular.woff') format("woff"), url('../fonts/Roboto-Regular.woff2') format("woff2");
+}
