--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import "fonts.scss";
 @import "core.scss";
 @import "header.scss";
-@import "main.scss";
+@import "common-data.scss";
+@import "resume.scss";
