feat: add linl on one work and english certificate

--- a/src/main.pug
+++ b/src/main.pug
@@ -75,3 +75,11 @@ main(class="middle")
       p(class="middle__name-department") Electroenergetics and electrotechnical
       p(class="middle__name-educational-institution") National University of Science and Technology
       p(class="middle__period") 2014 - 2018
+    div(class="middle__info info")
+      h2 My works
+      p My works and source code locate in GitHub of mine. Above I leave link of them. Please, don’t condemn very strongly :-). There is no limit perfect.
+      a(href="https://guyfox70.github.io/snake-gh-pages/" class="middle__snake") Snake
+    div(class="middle__info info")
+      h2 My English level
+      p You may see my English level and certificate for link below:
+      a(href="https://www.efset.org/cert/3RSqEz" class="middle__en-level") English certificate
