--- a/src/scss/common-data.scss
+++ b/src/scss/common-data.scss
@@ -2,6 +2,12 @@
   display: grid;
   grid-template-areas: "feature resume";
   grid-template-columns: 35% 65%;
+
+  @media screen and (max-width: 980px) {
+    grid-template-areas: "feature" "resume";
+    grid-template-columns: 100%;
+    grid-auto-rows: auto;
+  }
 }
 
 .middle__common-data {
@@ -12,26 +18,67 @@
   flex-direction: column;
 
   grid-area: feature;
+
+  @media screen and (max-width: 980px) {
+    padding: 5% 20% 0 20%;
+  }
 }
 
 .middle__contact-data {
   margin-bottom: 10%;
+
+  @media screen and (max-width: 980px) {
+    margin-bottom: 5%;
+  }
 }
 
 .middle__name-contact {
   display: flex;
   
   font-family: 'Lato-Bold';
-  font-size: 50px;
-  line-height: 60px;
+  font-size: calc(18px + 1.4vw);
+  line-height: calc(18px + 1.5vw);
+
+  @media screen and (max-width: 1728px) {
+    font-size: calc(18px + 1.2vw);
+  }
+
+  @media screen and (max-width: 1472px) {
+    font-size: calc(18px + 1vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .8vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .6vw);
+  }
 }
 
 .middle__text {
   font-family: 'Lato-Light';
-  font-size: 42px;
-  line-height: 60px;
+  font-size: calc(18px + 1vw);
+  line-height: calc(18px + 1.5vw);
 
   color: #1f2222;
+
+  @media screen and (max-width: 1728px) {
+    font-size: calc(18px + .8vw);
+  }
+
+  @media screen and (max-width: 1472px) {
+    font-size: calc(18px + .6vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .4vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .1vw);
+  }
+
 }
 
 .middle__network {
@@ -40,12 +87,28 @@
   color: #1f2222;
 
   font-family: 'Lato-Light';
-  font-size: 42px;
-  line-height: 60px;
+  font-size: calc(18px + 1vw);
+  line-height: calc(18px + 1.5vw);
+
+  @media screen and (max-width: 1728px) {
+    font-size: calc(18px + .8vw);
+  }
+
+  @media screen and (max-width: 1472px) {
+    font-size: calc(18px + .6vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .4vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .1vw);
+  }
 }
 
 .middle__network:not(:last-child) {
-  margin-bottom: 50px;
+  margin-bottom: calc(18px + 1.4vw);
 }
 
 #vk::before {
@@ -56,7 +119,7 @@
   background: url('../img/vk.png') no-repeat center;
   background-size: contain;
   vertical-align: middle;
-  margin: 0 50px 0 0;
+  margin: 0 calc(18px + 1.4vw) 0 0;
 }
 
 #fb::before {
@@ -67,7 +130,7 @@
   background: url('../img/facebook.png') no-repeat center;
   background-size: contain;
   vertical-align: middle;
-  margin: 0 50px 0 0;
+  margin: 0 calc(18px + 1.4vw) 0 0;
 }
 
 #instagram::before {
@@ -78,7 +141,7 @@
   background: url('../img/instagram.png') no-repeat center;
   background-size: contain;
   vertical-align: middle;
-  margin: 0 50px 0 0;
+  margin: 0 calc(18px + 1.4vw) 0 0;
 }
 
 #whatUp::before {
@@ -89,31 +152,81 @@
   background: url('../img/whatsapp.png') no-repeat center;
   background-size: contain;
   vertical-align: middle;
-  margin: 0 50px 0 0;
+  margin: 0 calc(18px + 1.4vw) 0 0;
 }
 
 .middle__container-skills {
   margin: 20% 0 0 0;
   font-family: 'Lato-Bold';
-  font-size: 50px;
-  line-height: 60px;
+  font-size: calc(18px + 1.4vw);
+  line-height: calc(18px + 1.5vw);
+
+  @media screen and (max-width: 1728px) {
+    font-size: calc(18px + 1.2vw);
+  }
+
+  @media screen and (max-width: 1472px) {
+    font-size: calc(18px + 1vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .8vw);
+  }
+
+  @media screen and (max-width: 980px) {
+    margin: 15% 0 0 0;
+  }
+
 }
 
 .middle__skills {
   margin: 10% 0 0 0;
 
   font-family: 'Lato-Light';
-  font-size: 42px;
-  line-height: 60px;
+  font-size: calc(18px + 1vw);
+  line-height: calc(18px + 1.5vw);
+
+  @media screen and (max-width: 1728px) {
+    font-size: calc(18px + .8vw);
+  }
+
+  @media screen and (max-width: 1472px) {
+    font-size: calc(18px + .6vw);
+  }
+
+  @media screen and (max-width: 1282px) {
+    font-size: calc(18px + .4vw);
+  }
+
+  @media screen and (max-width: 1174px) {
+    font-size: calc(18px + .1vw);
+  }
+
+  @media screen and (max-width: 1174px) {
+    margin: 5% 0 0 0;
+  }
+
+}
+
+.middle__skills:last-child {
+  margin: 5% 0 10% 0;
+
+  @media screen and (max-width: 980px) {
+    margin: 5% 0 5% 0;
+  }
 }
 
 .middle__skills > span {
   display: block;
   width: 100%;
-  height: 18px;
+  height: .7vw;
   border: 1px solid #7d64a7;
   margin: 10px 0 0 0;
   border-radius: 10px;
+
+  @media screen and (max-width: 780px) {
+    height: 1.5vw;
+  }
 }
 
 .middle__skills > span > span{
